--- a/css/estilo.css
+++ b/css/estilo.css
@@ -13,7 +13,7 @@
     align-items: center;
     justify-content: center;
     background-color: rgba(255, 84, 0, 0.81);
-    border-bottom: 0.5px solid #000000;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.26);
 }
 
 .menu a {
@@ -68,6 +68,7 @@
         justify-content: space-around;
         width: 100%;
         height: 50px;
+        box-shadow: 0 0 1px 0 #000000;
     }
 
     .menu ul {
