--- a/css/estilo.css
+++ b/css/estilo.css
@@ -16,6 +16,14 @@
     border-bottom: 1px solid rgba(0, 0, 0, 0.26);
 }
 
+.menu hr {
+    width: 70%;
+    border-top: 1px solid rgb(0, 0, 0);
+    border-bottom: 0px;
+    border-left: 0;
+    border-right: 0;
+}
+
 .menu a {
     text-decoration: none;
     color: #ffffff;
