Ajustando tag hr

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -79,6 +79,10 @@
         box-shadow: 0 0 1px 0 #000000;
     }
 
+    .menu hr {
+        display: none;
+    }
+
     .menu ul {
         display: flex;
         flex-direction: row;
